data/logs/runtime.log
/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/index.ts(2,18): error TS7016: Could not find a declaration file for module 'cors'. '/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/cors/lib/index.js' implicitly has an 'any' type.
  Try `npm i --save-dev @types/cors` if it exists or add a new declaration (.d.ts) file containing `declare module 'cors';`

    at createTSError (/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1892:10)
    at Object.require.extensions.<computed> [as .ts] (/data/data/com.termux/files/home/Feac-ultimate-sovereign/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 7016 ]
}
